[metadata]
name = pp-apiaccesstoken
version = 1.0.1
description =  pp-apiaccesstoken
author = PythonPro Limited
author_email = opensource@pythonpro.co.uk
keywords =

classifiers =
    Topic :: Software Development :: Libraries
    Programming Language :: Python

install_requires =
    # Runtime dependencies
    pkglib
    pp-auth
    requests

setup_requires =
    # Setup dependencies, usually empty.

tests_require =
    # Testing dependencies
    pytest-cov

console_scripts =

[egg_info]
# This adds the 'dev' marker to versions.
# This must conform to PEP-386:
# http://www.python.org/dev/peps/pep-0386/#the-new-versioning-algorithm
tag_build = .dev1

[upload_docs]
upload-dir = build/sphinx/html
show-response = 1

[pytest]
# This section sets configuration for all invocations of py.test,
# both standalone cmdline and running via setup.py
norecursedirs = .hg *.egg build dist

[nosetests]
match = ^test
nocapture = 1
cover-package = pp.apiaccesstoken
with-coverage = 1
cover-erase = 1

